# flourescent-flounder

./: README.md  netlify.toml
lichess-bot/: lichess_bot.py  requirements.txt
public/: index.html
public/css/: style.css
public/js/: app.js  chess.js  engine.js
rust-engine/: Cargo.toml
rust-engine/src/: board.rs  eval.rs  lib.rs  main.rs  search.rs  uci.rs
training/: train.py
