[package]
name = "cave-chess"
version = "0.1.0"
edition = "2021"
description = "Local chess engine with NNUE evaluation — compiles to native binary and WebAssembly"
authors = ["Cave Chess"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cave-chess"
path = "src/main.rs"

[dependencies]
rand = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
